[package]
name = "prometheus_jfplaybackreporting_exporter"
version = "0.1.0"
authors = ["J2ghz <j2.00ghz@gmail.com>"]
edition = "2018"
exclude = ['samples/*']

[dev-dependencies]
proptest = "0.10.0"
pretty_assertions = "0.6.1"


[dependencies]
prometheus_exporter_base = "0.30.4"
tokio = { version = "0.2.21", features = ["full"] }
csv = '1.1.3'

[patch.crates-io]
prometheus_exporter_base = { git = 'https://github.com/j2ghz/prometheus_exporter_base' }